%% QForge database schema after M1 — Domain foundation
%% NEW in M1: subjects, units, questions, blueprints (atop existing users)
erDiagram
    USERS ||--o{ BLUEPRINTS : owns
    SUBJECTS ||--o{ UNITS : "has"
    SUBJECTS ||--o{ QUESTIONS : "scopes"
    UNITS ||--o{ QUESTIONS : "groups"
    SUBJECTS ||--o{ BLUEPRINTS : "targets"

    USERS {
        bigint id PK
        string name
        string email UK
        enum role "teacher|admin"
        timestamp email_verified_at
        string password
        timestamps created_updated
    }

    SUBJECTS {
        bigint id PK
        string code UK "route key e.g. CS302"
        string name
        text description
        longtext syllabus "markdown"
        timestamps created_updated
    }

    UNITS {
        bigint id PK
        bigint subject_id FK
        string name
        int position
        timestamps created_updated
    }

    QUESTIONS {
        bigint id PK
        bigint subject_id FK
        bigint unit_id FK
        string type "short|long|mcq"
        int marks
        enum difficulty "easy|medium|hard, nullable"
        longtext text
        enum source "extracted|ai|manual"
        enum status "pending|approved|rejected"
        json attributes "nullable, subject-specific"
        int used_count "denormalized"
        timestamps created_updated
    }

    BLUEPRINTS {
        bigint id PK
        bigint owner_id FK "users.id"
        bigint subject_id FK
        string name
        int total_marks
        int duration "minutes"
        bool ai_assist
        json definition "sections/unitRules/unitAllocations/exclusionRules"
        timestamp last_used_at "nullable"
        timestamps created_updated
    }
